@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.711 2014-05-23 22:52:15 zender Exp $ -*-text-*-
+$Header: /data/zender/nco_20150216/nco/doc/ANNOUNCE,v 1.712 2014-05-27 02:55:26 zender Exp $ -*-text-*-
 
 The netCDF Operators NCO version 4.4.4 are ready. 
 
@@ -70,6 +70,10 @@ A. nces now computes statistics on ensemble members whose specified
    fxm better example
 
 BUG FIXES:
+
+A. Fixed ncwa incorrect interpretation ofsome --mask_conditions.
+   Due to an unlikely effect of a memory error in an obscurely related 
+   code-snippet. Thanks to Keith Lindsay for reporting.
 
 A. ncdismember better handles whitespace in group names
 
